--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>clock</title>
+    <style>
+      @font-face {
+        font-family: 'lcdphone';
+        src: url(<%= BASE_URL %>LCDPHONE.TTF);
+      }
+    </style>
   </head>
   <body>
     <noscript>
